# pctv-gtk

./: AUTHORS  Makefile.am  NEWS  README  README.md  TODO  configure.in
src/: Makefile.am  main.c  pctv_chanselect_ico.xpm  pctv_play_ico.xpm  pctv_rec_ico.xpm  pctv_stop_ico.xpm
