## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES = \
	$(GTK_CFLAGS)

AM_CFLAGS =\
	 -Wall\
	 -O3\
	 -g

bin_PROGRAMS = pctv_gtk

pctv_gtk_SOURCES = \
	main.c\
	pctv_chanselect_ico.xpm\
	pctv_play_ico.xpm\
	pctv_rec_ico.xpm\
	pctv_stop_ico.xpm

pctv_gtk_LDFLAGS = 

pctv_gtk_LDADD =  \
	$(GTK_LIBS)

